--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Neighborhood</title>
   <link rel="stylesheet" type="text/css" href="/styles.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
   <div id="neighborhood"></div>
