--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <div id="neighborhood"></div>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script src="http://3.16.89.66/app.js"></script>
+  <script src="./app.js"></script>
   <script>
     ReactDOM.render(
       React.createElement(Neighborhood),
