--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   <script src="./app.js"></script>
   <script>
-    ReactDOM.render(
+    ReactDOM.hydrate(
       React.createElement(Neighborhood),
       document.getElementById('neighborhood')
     );
